--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -24,6 +24,7 @@ h1{
   font-size: 24px;
   line-height: 150%;
   color: #35435F;
+  margin-bottom: 20px;
   }
 
 h2{
@@ -33,6 +34,7 @@ h2{
   font-size: 20px;
   line-height: 150%;
   color: #35435F;
+  margin-bottom: 20px;
   }
 
   h3{
@@ -50,6 +52,7 @@ h2{
     font-size: 16px;
     line-height: 150%;
     color: #35435F;
+
   }
 
   h6{
@@ -59,6 +62,7 @@ h2{
     font-size: 12px;
     line-height: 150%;
     color: #35435F;
+
   }
 
 p{
@@ -350,7 +354,7 @@ p{
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: repeat(3,1fr);
+  grid-template-rows: 1fr auto 1fr;
   max-width: 1366px;
   margin:80px;
   height:416px;
@@ -364,7 +368,7 @@ p{
 
 .hero-copy{
 grid-column: 1/span 7;
-grid-row: 2/span 2;
+grid-row: 2/span 1;
 
 }
 
@@ -385,7 +389,7 @@ grid-row: 3/span 1;
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto;
+    grid-template-rows: auto auto auto 1fr;
     max-width: 768px;
     margin:25px;
   }
@@ -398,7 +402,7 @@ grid-row: 3/span 1;
 
   .hero-copy{
   grid-column: 1/span 4;
-  grid-row: 2/span 2;
+  grid-row: 2/span 1;
 
   }
 
@@ -474,13 +478,14 @@ grid-row: 3/span 1;
   grid-template-rows: 1;
   grid-column: 1/span 12;
   grid-row:3;
+  margin-bottom: 50px;
 }
 
 .card1{
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: auto auto 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr;
   grid-column: 1/span 3;
   grid-row:1;
   box-shadow: 0px 0px 19px -6px #000000;
@@ -490,7 +495,7 @@ grid-row: 3/span 1;
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: auto auto 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr;
   grid-column: 4/span 3;
   grid-row:1;
   box-shadow: 0px 0px 19px -6px #000000;
@@ -500,7 +505,7 @@ grid-row: 3/span 1;
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: auto auto 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr;
   grid-column: 7/span 3;
   grid-row:1;
   box-shadow: 0px 0px 19px -6px #000000;
@@ -510,7 +515,7 @@ grid-row: 3/span 1;
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: auto auto 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr;
   grid-column: 10/span 3;
   grid-row:1;
   box-shadow: 0px 0px 19px -6px #000000;
@@ -529,14 +534,14 @@ grid-row: 3/span 1;
   grid-column: 1/span 3;
   grid-row:2;
   align-self:flex-end;
-  margin:10px;
+  margin:20 10 0 10;
   height: 36px;
 }
 
 .card-project-title{
   grid-column: 1/span 3;
   grid-row:3;
-  margin:10px;
+  margin:0 10 0 10;
 }
 
 .card-see-the-full-case-study{
@@ -584,16 +589,19 @@ grid-row: 3/span 1;
   .eyebrow-text{
     grid-column: 1/span 4;
     grid-row: 5/span 1;
+    margin: 20 0 0 0;
   }
 
   .featured-project-title{
     grid-column: 1/span 4;
     grid-row: 6/span 1;
+    margin: 20 0 0 0;
   }
 
   .featured-project-description{
     grid-column: 1/span 4;
     grid-row: 7/span 1;
+    margin: 20 0 0 0;
   }
 
   .see-the-full-case-study{
@@ -608,46 +616,51 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto auto auto;
     grid-column: 1/span 4;
     grid-row:3;
+    margin-bottom: 50px;
   }
 
   .card1{
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr;
     grid-column: 1/span 4;
     grid-row:1;
     box-shadow: 0px 0px 19px -6px #000000;
+    margin: 20 0 20 0;
   }
 
   .card2{
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr;
     grid-column: 1/span 4;
     grid-row:2;
     box-shadow: 0px 0px 19px -6px #000000;
+    margin: 20 0 20 0;
   }
 
   .card3{
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr;
     grid-column: 1/span 4;
     grid-row:3;
     box-shadow: 0px 0px 19px -6px #000000;
+    margin: 20 0 20 0;
   }
 
   .card4{
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto 1fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr;
     grid-column: 1/span 4;
     grid-row:4;
     box-shadow: 0px 0px 19px -6px #000000;
+    margin: 20 0 20 0;
   }
 
   .card-project-image{
@@ -663,14 +676,14 @@ grid-row: 3/span 1;
     grid-column: 1/span 4;
     grid-row:2;
     align-self:flex-end;
-    margin:10px;
+    margin: 20 10 0 10;
     height: 36px;
   }
 
   .card-project-title{
     grid-column: 1/span 4;
     grid-row:3;
-    margin:10px;
+    margin:0 10 0 10;
   }
 
   .card-see-the-full-case-study{
