--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -38,7 +38,13 @@ h2{
   }
 
   h3{
-
+    font-family: Avenir;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 150%;
+    color: #35435F;
+    margin-bottom: 20px;
   }
 
   h4{
@@ -430,7 +436,12 @@ grid-row: 3/span 1;
 
 .work-headline{
   grid-column: 1/span 12;
-  grid-row: 1/span 1;
+  grid-row: 1;
+}
+
+.featured-case-study-headline{
+  grid-column: 1/span 12;
+  grid-row: 2;
 }
 
 .featured-work{
@@ -439,7 +450,7 @@ grid-row: 3/span 1;
   grid-template-columns: repeat(12,1fr);
   grid-template-rows: auto auto auto auto;
   grid-column: 1/span 12;
-  grid-row:2;
+  grid-row:3;
   margin-bottom: 50px;
 }
 
@@ -471,13 +482,18 @@ grid-row: 3/span 1;
   grid-row: 4/span 1;
 }
 
+.additional-case-studies-headline{
+  grid-column: 1/span 12;
+  grid-row:4;
+}
+
 .additional-work{
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(12,1fr);
   grid-template-rows: 1;
   grid-column: 1/span 12;
-  grid-row:3;
+  grid-row:5;
   margin-bottom: 50px;
 }
 
@@ -565,7 +581,12 @@ grid-row: 3/span 1;
 
   .work-headline{
     grid-column: 1/span 4;
-    grid-row: 1/span 1;
+    grid-row: 1;
+  }
+
+  .featured-case-study-headline{
+    grid-column: 1/span 4;
+    grid-row: 2;
   }
 
   .featured-work{
@@ -574,7 +595,7 @@ grid-row: 3/span 1;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: auto auto auto auto;
     grid-column: 1/span 4;
-    grid-row:2;
+    grid-row:3;
     margin-bottom: 50px;
   }
 
@@ -609,13 +630,18 @@ grid-row: 3/span 1;
     grid-row: 8/span 1;
   }
 
+  .additional-case-studies-headline{
+    grid-column: 1/span 4;
+    grid-row:4;
+  }
+
   .additional-work{
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: auto auto auto auto;
     grid-column: 1/span 4;
-    grid-row:3;
+    grid-row:5;
     margin-bottom: 50px;
   }
 
