--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -491,7 +491,7 @@ grid-row: 3/span 1;
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: 1;
+  grid-template-rows: 2;
   grid-column: 1/span 12;
   grid-row:5;
   margin-bottom: 50px;
@@ -534,6 +534,26 @@ grid-row: 3/span 1;
   grid-template-rows: auto 1fr 1fr 1fr;
   grid-column: 10/span 3;
   grid-row:1;
+  box-shadow: 0px 0px 19px -6px #000000;
+}
+
+.card5{
+  display:grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: auto 1fr 1fr 1fr;
+  grid-column: 1/span 3;
+  grid-row:2;
+  box-shadow: 0px 0px 19px -6px #000000;
+}
+
+.card6{
+  display:grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: auto 1fr 1fr 1fr;
+  grid-column: 4/span 3;
+  grid-row:2;
   box-shadow: 0px 0px 19px -6px #000000;
 }
 
@@ -639,7 +659,7 @@ grid-row: 3/span 1;
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
     grid-column: 1/span 4;
     grid-row:5;
     margin-bottom: 50px;
@@ -685,6 +705,28 @@ grid-row: 3/span 1;
     grid-template-rows: auto 1fr 1fr 1fr;
     grid-column: 1/span 4;
     grid-row:4;
+    box-shadow: 0px 0px 19px -6px #000000;
+    margin: 20 0 20 0;
+  }
+
+  .card5{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto 1fr 1fr 1fr;
+    grid-column: 1/span 4;
+    grid-row:5;
+    box-shadow: 0px 0px 19px -6px #000000;
+    margin: 20 0 20 0;
+  }
+
+  .card6{
+    display:grid;
+    grid-gap: 5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto 1fr 1fr 1fr;
+    grid-column: 1/span 4;
+    grid-row:6;
     box-shadow: 0px 0px 19px -6px #000000;
     margin: 20 0 20 0;
   }
