Removed max width on role/deliverable/tool grid in intro.

--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -203,7 +203,7 @@ grid-row: 3/span 1;
   grid-gap:20px;
   grid-template-columns: repeat(12,1fr);
   grid-template-rows:1;
-  max-width: 1366px;
+  /* max-width: 1366px; */
   margin-left:-80px;
   margin-right:-80px;
   grid-column: 1/span 12;
