--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -40,6 +40,9 @@ grid-column: 4/span 3;
 grid-row: 3/span 1;
 }
 
+
+
+
 /* Mobile hero section */
 
 @media screen and (max-width: 768px){
@@ -72,19 +75,7 @@ grid-row: 3/span 1;
   grid-row: 3/span 1;
   }
 
-  .floodlight-summary{
-    Display: grid;
-    grid-gap:20px;
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: auto auto auto auto auto auto auto;
-    max-width: 1366px;
-    margin: 0px;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-bottom: 80px;
-    background-color: #EBD7D0;
 
-  }
 
 
 }
@@ -174,10 +165,21 @@ grid-row: 3/span 1;
 
 
 
-/* Floodlight case study details below */
+/* desktop overview settings */
 
 
-
+.floodlight-summary{
+  Display: grid;
+  grid-gap:20px;
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: auto auto auto auto auto auto auto;
+  max-width: 1366px;
+  margin: 0px;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 80px;
+  background-color: #EBD7D0;
+}
 
 
 .role-deliverable-tool-grid{
