--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -28,6 +28,7 @@ grid-row: 2/span 1;
   grid-column: 8/span 5;
   grid-row: 1/span 3;
   width: 100%;
+  box-shadow: 0px 0px 19px -6px #000000;
 }
 
 .hero-contact{
