--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -674,9 +674,15 @@ grid-row: 3/span 1;
   grid-row-start:16;
 }
 
-.phase-2-sitemap{
+.revised-sitemap-image-title{
   grid-column: 1/span 12;
   grid-row-start:17;
+  text-align: center;
+}
+
+.phase-2-sitemap{
+  grid-column: 1/span 12;
+  grid-row-start:18;
   text-align: center;
 }
 
@@ -687,17 +693,23 @@ grid-row: 3/span 1;
 
 .manuscript-headline{
   grid-column: 1/span 12;
-  grid-row-start:18;
+  grid-row-start:19;
 }
 
 .manuscript-intro{
   grid-column: 1/span 12;
-  grid-row-start:19;
+  grid-row-start:20;
+}
+
+.manuscript-image-title{
+  grid-column: 1/span 12;
+  grid-row-start:21;
+  text-align: center;
 }
 
 .floodlight-manuscript{
   grid-column: 1/span 12;
-  grid-row-start:20;
+  grid-row-start:22;
   text-align: center;
 }
 
@@ -708,17 +720,24 @@ grid-row: 3/span 1;
 
 .floodlight-wireframes{
   grid-column: 1/span 12;
-  grid-row-start:21;
+  grid-row-start:23;
 }
 
 .floodlight-wireframe-intro{
   grid-column: 1/span 12;
-  grid-row-start:22;
+  grid-row-start:24;
 }
+
+.floodlight-wireframe-images-title{
+  grid-column: 1/span 12;
+  grid-row-start:25;
+  text-align: center;
+}
+
 
 .floodlight-wireframe-homepage{
   grid-column: 1/span 6;
-  grid-row-start:23;
+  grid-row-start:26;
   text-align: right;
 }
 
@@ -730,7 +749,7 @@ grid-row: 3/span 1;
 
 .floodlight-wireframe-hcp-page{
   grid-column: 7/span 6;
-  grid-row-start:23;
+  grid-row-start:26;
   text-align: left;
 }
 
@@ -741,34 +760,34 @@ grid-row: 3/span 1;
 
 .streamlining-creative-handoff-headline{
   grid-column: 1/span 12;
-  grid-row-start:24;
+  grid-row-start:27;
 }
 
 .streamlining-creative-handoff-intro{
   grid-column: 1/span 12;
-  grid-row-start:25;
+  grid-row-start:28;
 }
 
 .streamlining-creative-handoff-list{
   grid-column: 1/span 12;
-  grid-row-start:26;
+  grid-row-start:29;
 }
 
 .floodlight-wireframe-sketch-workspace{
   grid-column: 1/span 12;
-  grid-row-start:27;
+  grid-row-start:30;
   text-align: center;
 }
 
 .floodlight-consistent-labeling{
   grid-column: 1/span 12;
-  grid-row-start:28;
+  grid-row-start:31;
   text-align: center;
 }
 
 .floodlight-sketch-symbols{
   grid-column: 1/span 12;
-  grid-row-start:29;
+  grid-row-start:32;
   text-align: center;
 }
 
